--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 langchain==0.2.16
-langchain_core==0.2.38
+langchain-chroma==0.1.3
+langchain-community==0.2.16
+langchain-core==0.2.38
+langchain-experimental==0.0.64
+langchain-openai==0.1.23
+langchain-text-splitters==0.2.2
 PyPDF2==3.0.1
 streamlit==1.37.1
-langchain-community==0.2.16
